@@ -26,24 +26,19 @@ import ai.metaheuristic.ai.dispatcher.task.TaskProviderTopLevelService;
 import ai.metaheuristic.ai.dispatcher.task.TaskTxService;
 import ai.metaheuristic.api.EnumsApi;
 import ai.metaheuristic.api.data.task.TaskApiData;
+import ai.metaheuristic.commons.utils.threads.ThreadedPool;
+import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Profile;
 import org.springframework.context.event.EventListener;
 import org.springframework.core.annotation.Order;
-import org.springframework.lang.Nullable;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import jakarta.annotation.PostConstruct;
-import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadPoolExecutor;
-import java.util.stream.Collectors;
 
 /**
  * @author Serge
@@ -68,8 +63,11 @@ public class ExecContextReadinessService {
     private final DispatcherParamsService dispatcherParamsService;
     private final TaskTxService taskTxService;
 
-    private final ThreadPoolExecutor executor = (ThreadPoolExecutor) Executors.newFixedThreadPool(1);
-    private final LinkedList<Long> queue = new LinkedList<>();
+    private final ThreadedPool<Long> startProcessReadinessEventThreadedPool =
+            new ThreadedPool<>(1, 0, false, false, (execContextId)->{
+                prepare(execContextId);
+                execContextReadinessStateService.remove(execContextId);
+            });
 
     @PostConstruct
     public void postConstruct() {
@@ -77,48 +75,17 @@ public class ExecContextReadinessService {
         log.info("Started execContextIds: " + ids);
         execContextReadinessStateService.addAll(ids);
         for (Long notReadyExecContextId : ids) {
-            putToQueue(notReadyExecContextId);
-        }
-        log.info("postConstruct(), queue: {}", getIdsFromQueue());
-    }
-
-    private void putToQueue(final Long execContextId) {
-        synchronized (queue) {
-            if (queue.contains(execContextId)) {
-                return;
-            }
-            queue.add(execContextId);
-        }
-    }
-
-    @Nullable
-    private Long pullFromQueue() {
-        synchronized (queue) {
-            return queue.pollFirst();
-        }
-    }
-
-    private List<Long> getIdsFromQueue() {
-        synchronized (queue) {
-            return new ArrayList<>(queue);
+            startProcessReadinessEventThreadedPool.putToQueue(notReadyExecContextId);
         }
     }
 
     // this method will be invoked only one time at startup
+    @SuppressWarnings("unused")
     @Async
     @EventListener
     @SneakyThrows
-    public void checkReadiness(StartProcessReadinessEvent event) {
-        // at this point queue was already filled with execContextIds in @PostConstruct method
-
-        log.info("checkReadiness() here, queue: {}", getIdsFromQueue());
-        executor.submit(() -> {
-            Long execContextId;
-            while ((execContextId = pullFromQueue()) != null) {
-                prepare(execContextId);
-                execContextReadinessStateService.remove(execContextId);
-            }
-        });
+    public void processSessionEvent(StartProcessReadinessEvent event) {
+        startProcessReadinessEventThreadedPool.processEvent();
     }
 
     private void prepare(Long execContextId) {
@@ -133,7 +100,7 @@ public class ExecContextReadinessService {
         final List<ExecContextData.TaskVertex> vertices = execContextGraphTopLevelService.findAllForAssigning(
                 execContext.execContextGraphId, execContext.execContextTaskStateId, true);
 
-        List<Long> taskIds = vertices.stream().map(v -> v.taskId).collect(Collectors.toList());
+        List<Long> taskIds = vertices.stream().map(v -> v.taskId).toList();
 
         for (Map.Entry<Long, TaskApiData.TaskState> entry : states.entrySet()) {
             final Long taskId = entry.getKey();
